Fix control-wrapper alignment issue.
Update dev dependencies.

--- a/less/main.less
+++ b/less/main.less
@@ -27,6 +27,7 @@ a:hover {
   border-bottom: 4px solid @accent;
   
   h1 {
+    position: relative;
     margin: 0 0 0 10px;
     font-size: 60px;
     color: @gray-light;
@@ -42,6 +43,13 @@ a:hover {
       &:hover, &.clicked {
         color: @accent;
       }
+    }
+
+    .control-wrapper {
+      display: inline-block;
+      position: absolute;
+      top: 0;
+      right: 0;
     }
   }
 }
